--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/dart-lang/sdk">
     <title>ROT X Conversion</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="out.js"></script>
+    <link rel="stylesheet" href="web/styles.css">
+    <script defer src="web/out.js"></script>
 </head>
 
 <body>
